feat(data): save moods in chrome local storage

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,8 @@
         "<all_urls>"
       ],
       "js": [
-        "popup/popup.js"
+        "popup/popup.js",
+        "scripts/sentences.js"
       ],
       "type": "module"
     }
